--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,18 @@
+==Launching our application
+After extracting the .zip, navigate into the root directory and execute the following commands:
+bundle install
+bundle update
+rake rails_env=production db:reset
+rake rails_env=development db:reset
+rake rails_env=test db:reset
+rake assets:precompile
+rails s -e production
+(use 'start rails s -e production' on Windows to open in a new command line window)
+
+In the clean production environment, there is one user with the following credentials:
+Username: Admin
+Password: password
+
 == Welcome to Rails
 
 Rails is a web-application framework that includes everything needed to create
@@ -259,5 +274,3 @@ vendor
   External libraries that the application depends on. Also includes the plugins
   subdirectory. If the app has frozen rails, those gems also go here, under
   vendor/rails/. This directory is in the load path.
-
-tests
