--- a/README.rdoc
+++ b/README.rdoc
@@ -1,13 +1,13 @@
 ==Launching our application
 After extracting the .zip, navigate into the root directory and execute the following commands:
-* bundle install
-* bundle update
-* rake rails_env=production db:reset
-* rake rails_env=development db:reset
-* rake rails_env=test db:reset
-* rake assets:precompile
-* rails s -e production
-  * production' on Windows to open in a new command line window)
+1. bundle install
+2. bundle update
+3. rake rails_env=production db:reset
+4. rake rails_env=development db:reset
+5. rake rails_env=test db:reset
+6. rake assets:precompile
+7. rails s -e production
+   * Use 'start rails s -e production' on windows to open in a new window
 
 
 In the clean production environment, there is one user with the following credentials:
