Added citation for the user authentication code

--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,7 @@
+==References==
+The following site was used as a tutorial/basis for developing our user authentication system:
+http://rubysource.com/rails-userpassword-authentication-from-scratch-part-i/
+
 ==Launching our application
 After extracting the .zip, navigate into the root directory and execute the following commands:
 1. bundle install
